--- a/_config.yml
+++ b/_config.yml
@@ -1,67 +1,61 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-#
-# If you need help with YAML syntax, here are some quick references for you:
-# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
-# https://learnxinyminutes.com/docs/yaml/
-#
+# ------------------------------
 # Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
-
+# ------------------------------
 title: Caleb Yenusah - HPC Engineer
 email: cyenusah@gmail.com
-description: >- # this means to ignore newlines until "baseurl:"
+description: >-
   Technical insights on high-performance computing, computational science,
   and performance optimization across scientific and AI/ML applications.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://calebyenusah.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # e.g., /blog if hosted on subpath
+url: "https://calebyenusah.github.io" # full URL of your site
 twitter_username: CalebYenusah
-github_username:  yencal
+github_username: yencal
 
+# ------------------------------
 # Build settings
+# ------------------------------
 markdown: kramdown
 theme: minima
 plugins:
-  - jekyll-feed
-  - jekyll-sitemap
-  - jekyll-seo-tag
+  - jekyll-feed       # generates /feed.xml
+  - jekyll-sitemap    # generates sitemap.xml
+  - jekyll-seo-tag    # SEO meta tags
 
-# Navigation (just keep it simple with about page)
+highlighter: rouge
+timezone: America/Los_Angeles
+
+# ------------------------------
+# Navigation
+# ------------------------------
 header_pages:
   - about.md
 
-# Code highlighting
-highlighter: rouge
+# ------------------------------
+# Exclude unnecessary files from build
+# ------------------------------
+exclude:
+  - Gemfile
+  - Gemfile.lock
+  - node_modules/
+  - vendor/
+  - .sass-cache/
+  - .jekyll-cache/
+  - .DS_Store
+  - README.md
 
-# Timezone
-timezone: America/Los_Angeles  # Adjust to your timezone
+# ------------------------------
+# Optional: Include any extra files
+# ------------------------------
+include:
+  - _pages
 
-# Exclude from processing.
-# The following items will not be processed, by default.
-# Any item listed under the `exclude:` key here will be automatically added to
-# the internal "default list".
-#
-# Excluded items can be processed by explicitly listing the directories or
-# their entries' file path in the `include:` list.
-#
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+# ------------------------------
+# RSS Feed URL (for convenience)
+# ------------------------------
+feed_url: /feed.xml
+
+# ------------------------------
+# Custom variables for site templates
+# ------------------------------
+about_image: /assets/images/caleb.jpg
+contact_email: cyenusah@gmail.com
